readme added & layout bugs fixed

--- a/styles/index.css
+++ b/styles/index.css
@@ -281,7 +281,7 @@ body {
   max-width: 120rem;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 1.5fr 1fr;
   gap: 4.8rem;
   align-items: center;
   justify-content: center;
@@ -295,15 +295,21 @@ body {
   text-align: right;
 }
 
-.purpose-text {
+.intro-content-box > .secondary-heading,
+.intro-content-box > .section-description {
+  text-align: right;
+}
+
+.purpose-heading {
   color: var(--text-grey);
   font-size: 2rem;
   font-weight: 500;
+  margin-bottom: 1.2rem;
 }
 
-.purpose-description {
+.purpose-text {
   color: var(--text-grey);
-  font-size: 2.4rem;
+  font-size: 2rem;
   font-weight: 700;
 }
 
